finalização do método create

--- a/frontend_dragons/pages/register.css
+++ b/frontend_dragons/pages/register.css
@@ -59,7 +59,7 @@ input {
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
-button {
+#button {
   font-size: large;
   border: 0;
   background-color: white;
