--- a/frontend_dragons/pages/register.css
+++ b/frontend_dragons/pages/register.css
@@ -41,10 +41,10 @@ form {
 }
 
 p {
-  font-weight: 500;
-  color: #fc466b;
+  font-weight: 700;
+  color: #ff2e58;
   opacity: 0.7;
-  font-size: 1.4rem;
+  font-size: 1.7rem;
   margin-top: 0;
   margin-bottom: 60px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
@@ -86,27 +86,43 @@ input {
   border-left: 1px solid #fc466b;
   border-top: 1px solid #fc466b;
   border-radius: 5000px;
-  backdrop-filter: blur(5px);
   box-shadow: 4px 4px 60px rgba(0, 0, 0, 0.2);
   color: #fc466b;
   font-family: Montserrat, sans-serif;
   font-weight: 500;
   transition: all 0.2s ease-in-out;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 #button {
   font-size: large;
+  margin-top: 10px;
   border: 0;
   background-color: white;
   font-family: Montserrat, sans-serif;
   font-weight: 400;
-  color: #fc466b;
+  color: #ff2e58;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
+  transition: all 0.2s ease-in-out;
+}
+
+#button:hover {
+  font-size: 1.2rem;
+  margin-top: 9px;
+  background-color: rgb(250, 250, 250);
+  font-family: Montserrat, sans-serif;
+  font-weight: 400;
+  color: #ff2e58;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
 }
 
-button:hover {
-  color: #ff224e;
+#button:active {
+  font-size: 1.2rem;
+  margin-top: 9px;
+  background-color: #ff2e58;
+  font-family: Montserrat, sans-serif;
+  font-weight: 400;
+  color: rgb(250, 250, 250);
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
 }
 
 .drop {
