--- a/frontend_dragons/pages/register.css
+++ b/frontend_dragons/pages/register.css
@@ -11,6 +11,14 @@ body {
   left: 50%;
 }
 
+.container-list {
+  width: 400px;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+}
+
 form {
   background: white;
   padding: 3em;
@@ -32,9 +40,8 @@ form {
 }
 
 #list {
-  width: 100%;
   background: white;
-  padding: 1.5em;
+  padding: 3em;
   height: fit-content;
   border-radius: 20px;
   border-left: 1px solid white;
@@ -42,7 +49,7 @@ form {
   backdrop-filter: blur(10px);
   box-shadow: 20px 20px 40px -6px rgba(0, 0, 0, 0.2);
   text-align: center;
-  position: relative;
+  position:relative;
   transition: all 0.2s ease-in-out;
 }
 
